--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,10 +11,11 @@
    
 
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name" >
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:name=".Splash"
         android:screenOrientation="landscape"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
