--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.speedonspeed"
-      android:versionCode="1"
-      android:versionName="1.0">
+      android:versionName="1.1" android:versionCode="2">
     <uses-sdk android:minSdkVersion="8" />
     <uses-feature android:name="android.hardware.location" android:required="true"></uses-feature>
    <uses-permission android:name="android.permission.android.permission.INTERNET" />
    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+       <uses-permission android:name="android.permission.WAKE_LOCK" />
+
    
 
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+    <application android:label="@string/app_name" android:icon="@drawable/speed_base_square" android:debuggable="false">
         <activity android:name=".Splash"
         android:screenOrientation="landscape"
                   android:label="@string/app_name"
