--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.speedonspeed"
-      android:versionName="1.1" android:versionCode="2">
+      android:versionCode="4" android:versionName="1.3">
     <uses-sdk android:minSdkVersion="8" />
     <uses-feature android:name="android.hardware.location" android:required="true"></uses-feature>
    <uses-permission android:name="android.permission.android.permission.INTERNET" />
